--- a/index.html
+++ b/index.html
@@ -1,19 +1,153 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-  <meta charset="utf-8" />
-  <link rel="icon" href="#" type="image/x-icon" />
-  <title>E-Games</title>
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="#" type="image/x-icon" />
+    <title>E-Games</title>
+  </head>
+  <body>
+    <!-- Footer -->
+  <footer class="page-footer font-small stylish-color-dark pt-4 fcolor">
+
+      <!-- Footer Links -->
+      <div class="container text-center text-md-left">
+
+        <!-- Grid row -->
+        <div class="row ">
+
+          <!-- Grid column -->
+          <div class="col-md-4 mx-auto ">
+
+            <!-- Content -->
+            <h5 class="font-weight-bold text-uppercase mt-3 mb-4">E-Games</h5>
+            <p>E-Games, le spécialiste de la vente de jeux en ligne ! Achetez tout vos jeux au
+            meilleur prix et avec un service client garanti !</p>
+
+          </div>
+          <!-- Grid column -->
+
+          <hr class="clearfix w-100 d-md-none">
+
+          <!-- Grid column -->
+          <div class="col-md-2 mx-auto ">
+
+            <!-- Links -->
+
+            <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Consoles</h5>
+
+            <ul class="list-unstyled">
+              <li>
+                <a href="#!">PS4</a>
+              </li>
+              <li>
+                <a href="#!">Xbox One</a>
+              </li>
+              <li>
+                <a href="#!">Nitendo Switch</a>
+              </li>
+            </ul>
+
+          </div>
+
+          <!-- Grid column -->
+
+          <hr class="clearfix w-100 d-md-none">
+
+          <!-- Grid column -->
+          <div class="col-md-2 mx-auto ">
+
+            <!-- Links -->
+            <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Jeux</h5>
+
+            <ul class="list-unstyled">
+              <li>
+                <a href="#!">Aventure</a>
+              </li>
+              <li>
+                <a href="#!">Action</a>
+              </li>
+              <li>
+                <a href="#!">RPG</a>
+              </li>
+            </ul>
+
+          </div>
+          <!-- Grid column -->
+
+          <hr class="clearfix w-100 d-md-none">
+
+          <!-- Grid column -->
+          <div class="col-md-2 mx-auto ">
+
+            <!-- Links -->
+            <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Mon compte</h5>
+
+            <ul class="list-unstyled">
+              <li>
+                <a href="#!">Panier</a>
+              </li>
+              <li>
+                <a href="#!">Profil</a>
+              </li>
+            </ul>
+
+          </div>
+          <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+      </div>
+      <!-- Footer Links -->
+
+      <hr class="tcolor">
+
+      <!-- Call to action -->
+      <ul class="list-unstyled list-inline text-center py-2">
+        <li class="list-inline-item">
+          <h5 class="mb-1">Inscrivez-vous à la newsletter !</h5>
+        </li>
+        <li class="list-inline-item">
+          <a href="#!" id="btncolor" class="btn btn-danger btn-rounded">Inscription</a>
+        </li>
+      </ul>
+      <!-- Call to action -->
+
+      <hr class="tcolor">
+
+      <!-- Social buttons -->
+      <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
+          <a href="#">
+          <img src="assets/images/facebook.png">
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="#">
+          <img src="assets/images/twitter.png">
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="#">
+          <img src="assets/images/discord.png">
+          </a>
+        </li>
+      </ul>
+      <!-- Social buttons -->
+
+      <hr>
+
+
+  </footer>
+  <!-- Footer -->
 
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="assets/javascript/script.js"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/javascript/script.js"></script>
+  </body>
 </html>
