--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
 </head>
 <body>
 <!-- Barre de Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
-    <a class="navbar-brand" href="#">E-Games</a>
+    <a class="navbar-brand" href="#" >E-Games</a>
   </div>
   </nav>
   <div class="nav nav-pills mb-3" id="pills-tab" role="tablist">
       <a class="nav-item nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Acceuil</a>
       <a class="nav-item nav-link" id="pills-products-tab" data-toggle="pill" href="#pills-products" role="tab" aria-controls="pills-products" aria-selected="false">Produits</a>
       <a class="nav-item nav-link" id="pills-bag-tab" data-toggle="pill" href="#pills-bag" role="tab" aria-controls="pills-bag" aria-selected="false"><img src="" alt="Panier"></a>
+      <a class="nav-item nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</a>
   </div>
   <div class="tab-content" id="pills-tabContent">
     <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">Test home</div>
     <div class="tab-pane fade" id="pills-products" role="tabpanel" aria-labelledby="pills-products-tab">Test produits</div>
     <div class="tab-pane fade" id="pills-bag" role="tabpanel" aria-labelledby="pills-bag-tab">Test panier</div>
+    <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">Test contact</div>
   </div>
 <!-- Fin de la Barre -->
 
