--- a/index.html
+++ b/index.html
@@ -11,54 +11,31 @@
     <!-- Footer -->
   <footer class="page-footer font-small stylish-color-dark pt-4 fcolor">
 
-      <!-- Footer Links -->
       <div class="container text-center text-md-left">
-
-        <!-- Grid row -->
         <div class="row ">
-
-          <!-- Grid column -->
           <div class="col-md-4 mx-auto ">
 
-            <!-- Content -->
             <h5 class="font-weight-bold text-uppercase mt-3 mb-4">E-Games</h5>
             <p>E-Games, le spécialiste de la vente de jeux en ligne ! Achetez tout vos jeux au
             meilleur prix et avec un service client garanti !</p>
 
           </div>
-          <!-- Grid column -->
 
           <hr class="clearfix w-100 d-md-none">
 
-          <!-- Grid column -->
           <div class="col-md-2 mx-auto ">
 
-            <!-- Links -->
+            <!--Maps Google-->
 
-            <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Consoles</h5>
-
-            <ul class="list-unstyled">
-              <li>
-                <a href="#!">PS4</a>
-              </li>
-              <li>
-                <a href="#!">Xbox One</a>
-              </li>
-              <li>
-                <a href="#!">Nitendo Switch</a>
-              </li>
-            </ul>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2592.0259523995096!2d0.13147335073038988!3d49.48401676430452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e02e55af007f11%3A0xcb679803210d6c5c!2s2+Rue+de+Dombasle%2C+76600+Le+Havre!5e0!3m2!1sfr!2sfr!4v1539862615583" width="300" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>
 
           </div>
 
-          <!-- Grid column -->
-
+          <!--Séparation-->
           <hr class="clearfix w-100 d-md-none">
 
-          <!-- Grid column -->
           <div class="col-md-2 mx-auto ">
 
-            <!-- Links -->
             <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Jeux</h5>
 
             <ul class="list-unstyled">
@@ -74,14 +51,12 @@
             </ul>
 
           </div>
-          <!-- Grid column -->
 
+          <!--Séparation-->
           <hr class="clearfix w-100 d-md-none">
 
-          <!-- Grid column -->
           <div class="col-md-2 mx-auto ">
 
-            <!-- Links -->
             <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Mon compte</h5>
 
             <ul class="list-unstyled">
@@ -94,17 +69,15 @@
             </ul>
 
           </div>
-          <!-- Grid column -->
 
         </div>
-        <!-- Grid row -->
 
       </div>
-      <!-- Footer Links -->
 
+      <!--Séparation-->
       <hr class="tcolor">
 
-      <!-- Call to action -->
+      <!--Bouton Newsletter-->
       <ul class="list-unstyled list-inline text-center py-2">
         <li class="list-inline-item">
           <h5 class="mb-1">Inscrivez-vous à la newsletter !</h5>
@@ -113,11 +86,11 @@
           <a href="#!" id="btncolor" class="btn btn-danger btn-rounded">Inscription</a>
         </li>
       </ul>
-      <!-- Call to action -->
 
+      <!--Séparation-->
       <hr class="tcolor">
 
-      <!-- Social buttons -->
+      <!--Vignettes réseaux sociaux-->
       <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
           <a href="#">
@@ -135,7 +108,6 @@
           </a>
         </li>
       </ul>
-      <!-- Social buttons -->
 
       <hr>
 
