--- a/index.html
+++ b/index.html
@@ -13,28 +13,29 @@
 
       <div class="container text-center text-md-left">
         <div class="row ">
-          <div class="col-md-4 mx-auto ">
+          <div class="col-lg-4 col-md-4 mx-auto ">
 
             <h5 class="font-weight-bold text-uppercase mt-3 mb-4">E-Games</h5>
             <p>E-Games, le spécialiste de la vente de jeux en ligne ! Achetez tout vos jeux au
-            meilleur prix et avec un service client garanti !</p>
+            meilleur prix et avec un service client garanti !<br /> Nous nous trouvons au 2 rue Dombasle,
+            au Havre, venez nous rendre visite !</p>
 
           </div>
 
           <hr class="clearfix w-100 d-md-none">
 
-          <div class="col-md-2 mx-auto ">
+          <div class="col-lg-3 col-md-2 mx-auto ">
 
             <!--Maps Google-->
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2592.0259523995096!2d0.13147335073038988!3d49.48401676430452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e02e55af007f11%3A0xcb679803210d6c5c!2s2+Rue+de+Dombasle%2C+76600+Le+Havre!5e0!3m2!1sfr!2sfr!4v1539862615583" width="300" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2592.0259523995096!2d0.13147335073038988!3d49.48401676430452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e02e55af007f11%3A0xcb679803210d6c5c!2s2+Rue+de+Dombasle%2C+76600+Le+Havre!5e0!3m2!1sfr!2sfr!4v1539862615583" width="250" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
 
           </div>
 
           <!--Séparation-->
           <hr class="clearfix w-100 d-md-none">
 
-          <div class="col-md-2 mx-auto ">
+          <div class="col-lg-1 col-md-2 mx-auto ">
 
             <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Jeux</h5>
 
@@ -55,7 +56,7 @@
           <!--Séparation-->
           <hr class="clearfix w-100 d-md-none">
 
-          <div class="col-md-2 mx-auto ">
+          <div class="col-lg-2 col-md-2 mx-auto ">
 
             <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Mon compte</h5>
 
@@ -94,17 +95,17 @@
       <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
           <a href="#">
-          <img src="assets/images/facebook.png">
+          <img src="assets/imgs/facebook.png">
           </a>
         </li>
         <li class="list-inline-item">
           <a href="#">
-          <img src="assets/images/twitter.png">
+          <img src="assets/imgs/twitter.png">
           </a>
         </li>
         <li class="list-inline-item">
           <a href="#">
-          <img src="assets/images/discord.png">
+          <img src="assets/imgs/discord.png">
           </a>
         </li>
       </ul>
