--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <meta charset="utf-8" />
-    <link rel="icon" href="#" type="image/x-icon" />
+    <link rel="icon" href="assets/imgs/logoTitle.png" type="image/x-icon" />
     <title>E-Games</title>
   </head>
   <body>
@@ -49,6 +49,12 @@
               <li>
                 <a href="#!">RPG</a>
               </li>
+              <li>
+                <a href="#!">FPS</a>
+              </li>
+              <li>
+                <a href="#!">Stratégie</a>
+              </li>
             </ul>
 
           </div>
@@ -84,7 +90,7 @@
           <h5 class="mb-1">Inscrivez-vous à la newsletter !</h5>
         </li>
         <li class="list-inline-item">
-          <a href="#!" id="btncolor" class="btn btn-danger btn-rounded">Inscription</a>
+          <a href="#!" class="btn btn-danger btn-rounded">Inscription</a>
         </li>
       </ul>
 
