--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <h5 class="mb-1">Inscrivez-vous à la newsletter !</h5>
         </li>
         <li class="list-inline-item">
-          <a href="#!" class="btn btn-danger btn-rounded">Inscription</a>
+          <a href="#!" id="btnrad" class="btn btn-danger btn-rounded btncolor">Inscription</a>
         </li>
       </ul>
 
