Soon finish the navbar

--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
 </head>
 <body>
   <!-- Barre parallax logo et fond du site -->
-
-    <div class="parallax">
-      <a class="navbar-brand" href="#" >E-Games</a>
+  <div id=header-wrapper>
+    <div id="top"></div>
+    <div class="titlehead">
+      <img src="assets/imgs/logoSite.png" id="logo" alt="Titre" />
     </div>
-
-  <!-- Fin de la barre parallax -->
+  </div>
+  <!-- Fin du parallax -->
 
   <!-- Barre de Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top">
+
+<!-- ici pour logo -->
     <a class="navbar-brand" href="#">Menu</a>
+<!-- ici pour logo -->
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -50,11 +55,11 @@
   <div class="nav nav-pills" id="pills-tab" role="tablist">
     <a class="nav-item nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Acceuil</a>
     <a class="nav-item nav-link" id="pills-products-tab" data-toggle="pill" href="#pills-products" role="tab" aria-controls="pills-products" aria-selected="false">Produits</a>
-    <a class="nav-item nav-link" id="pills-bag-tab" data-toggle="pill" href="#pills-bag" role="tab" aria-controls="pills-bag" aria-selected="false"><img src="" alt="Panier"></a>
     <a class="nav-item nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</a>
+    <a class="nav-item nav-link" id="pills-bag-tab" href="#pills-bag" role="tab" aria-controls="pills-bag" aria-selected="false"><img src="assets/imgs/Panier 200X191.png" width="29rem" height="29rem" alt="Panier"></a>
   </div>
   <div class="tab-content" id="pills-tabContent">
-    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">Test home</div>
+    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">Test home disouhdgsoijadhsaojgdhsaijhdesghdfashfcijsgcfiuohdfhgsdflkhazcjgsqklchsihjhdfeshjdsgcflksbdhgcfisdzgkcja scsacsdbcsa casc baz c zsfc </br> as dca dfs fs cf sc fz f dzfv dzf sd gfd hb fgh feg fs gfe g dfg dfgdfgv dgf dgh fe htr uhytrg hh kjht hdf gdf ghb sfd tj fd hgdf hgbfd sbh grf bdsf gb efgrhgfdhdsf hf dghdsf h fdsh gf eh fsd hf dh fsd hfsd g fdh cs ghds gb df vb rfgb fsd b dfghsfchg dv hguygfg uf y fhygf hiy f hyu fg v hifi fds f df ds fdf dfsf  ds f dsf ds f</br>  df d sf  d </br> f ds f  d</br> s f dsf  ds fds f d s fs</br> d f d s fd f  df ds f d f</br>   sfdb h gh gr fh </br>  fg ef g ef g fe g fe  bg ef v fegv ef </br> gv fe v  df gfvfe v ed vc dz v e fdv</br>   df vdev d fs </br> hjg ih g ij gf ih g hj g h g ihflj g urfih gfgud hj fu hgrhu gf uhtr chyit u g hih fui g jih g ij  hgt ih hu f ih g gjk gihg hij g ihj bhi jg jo b jhg lkj g jkj g kjl gihj g kjf jo  hglkj ghiyg ihftydtrf dj yfe dhgfds gffd htd fhgdg hdgf fd</div>
     <div class="tab-pane fade" id="pills-products" role="tabpanel" aria-labelledby="pills-products-tab">Test produits</div>
     <div class="tab-pane fade" id="pills-bag" role="tabpanel" aria-labelledby="pills-bag-tab">Test panier</div>
     <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">Test contact</div>
