--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         </li>
       </ul>
 
-      <hr>
 
+      <p class="ptext">Made with < 3 by team 14</p>
 
   </footer>
   <!-- Footer -->
