--- a/index.html
+++ b/index.html
@@ -8,12 +8,314 @@
   <title>E-Games</title>
 </head>
 <body>
+<!-- PARTIE ADRIEN -->
+<div class="container">
+  <div class="row justify-content-around">
+<!-- PREMIER JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img clas="img-fluid" src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" alt="Responsive image" /></div>
 
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>Red Dead Redemption 2</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p>Red Dead Redemption 2 raconte une histoire épique au cœur de l'Amérique à l'aube de l'ère moderne.
+                   On y suit l'aventure d'Arthur Morgan dans cet Ouest en cours de modernisation et dans toutes les histoires
+                   qui le lie à sa bande.</p>
+            </div>
+            <button class="Abutton">Ajouter au panier !</button>
+        </div>
+        <!-- Fin du corp -->
+</div>
+<!-- DEUXIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
 
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>COD: Black Ops 4</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+<!-- TROISIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>Forza Horizon 4</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+<!-- QUATRIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
+
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>AC Odyssey</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+</div>
+</div>
+<div class="row">
+<!-- CINQUIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
+
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>Mario Party</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+<!-- SIXIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
+
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>Fallout 76</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+<!-- SEPTIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
+
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>Death Stranding</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+<!-- HUITIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
+
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>Anthem</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+</div>
+<div clas="row">
+<!-- NEUVIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
+
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>My Hero One’s Justice</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+<!-- DIXIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
+
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>The Last of us part:II</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+<!-- ONZIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
+
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>Battlefield V</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+            <button>Ajouter au panier !</button>
+        </div>
+        <!-- Fin du corp -->
+</div>
+<!-- DOUZIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
+
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>The Division 2</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+</div>
+<div class="row">
+<!-- TREIZIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
+
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>Seikiro : Shadow die twice</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+<!-- QUATORZIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
+
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>Beyound good and evil 2</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+<!-- QUINZIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
+
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>Ori and the Will of the Wisps</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+<!-- SEIZIÈME JEU -->
+<div class="card element col-lg-3 col-sm-1">
+        <!-- Image -->
+        <div class="card-image"><img src="assets/imgs/funk/Red_Dead_Redemption_2.jpg" /></div>
+
+        <!-- Corp de notre carte -->
+        <div class="card-body">
+            <!-- Titre du jeu -->
+            <div class="card-title">
+                <h3>Days Gone</h3>
+            </div>
+            <!-- Description du jeu -->
+            <div class="card-excerpt">
+                <p> Je suis un jeu, oui. </p>
+            </div>
+        </div>
+        <!-- Fin du corp -->
+</div>
+</div>
+</div>
+<!-- FIN DE PARTIE ADRIEN -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script type="text/javascript" src="assets/javascript/script.js"></script>
 </body>
 </html>
