--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </ul>
 
 
-      <p class="ptext">Made with < 3 by team 14</p>
+      <p class="ptext">Made with &hearts; by team 14</p>
 
   </footer>
   <!-- Footer -->
