--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   <div id=header-wrapper>
     <div id="top"></div>
     <div class="titlehead">
-      <img src="assets/imgs/logoSite.png" id="logo" alt="Titre" />
+      <img src="assets/imgs/logoSite+.png" id="logo" alt="Titre" />
     </div>
   </div>
   <!-- Fin du parallax -->
 
   <!-- Barre de Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-light sticky-top" id="navbarColor">
 
 <!-- ici pour logo -->
-    <a class="navbar-brand" href="#">Menu</a>
+    <a class="navbar-brand" href="#"><img src="assets/imgs/logoSite.png" id="logoNav" alt="LogoDuSite"></a>
 <!-- ici pour logo -->
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,30 +29,17 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarColor03">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-      </ul>
+      <ul class="navbar-nav mr-auto"></ul>
       <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" placeholder="Search" type="text">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        <input class="form-control mr-sm-2" placeholder="Red Dead..." type="text">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Recherche</button>
       </form>
     </div>
   </nav>
   <!-- Fin de la Barre -->
 
   <!-- Onglet de navigation -->
-  <div class="nav nav-pills" id="pills-tab" role="tablist">
+  <div class="nav nav-pills sticky-top" id="pills-tab" role="tablist">
     <a class="nav-item nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Acceuil</a>
     <a class="nav-item nav-link" id="pills-products-tab" data-toggle="pill" href="#pills-products" role="tab" aria-controls="pills-products" aria-selected="false">Produits</a>
     <a class="nav-item nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</a>
