Little Update soon Responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" href="#" type="image/x-icon" />
   <title>E-Games</title>
 </head>
@@ -40,7 +41,7 @@
   <!-- Fin de la Barre -->
 
   <!-- Onglet de navigation -->
-  <div class="nav nav-pills sticky-top" id="pills-tab" role="tablist">
+  <div class="nav navbar-expand-lg nav-pills sticky-top" id="pills-tab" role="tablist">
     <a class="nav-item nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Acceuil</a>
     <a class="nav-item nav-link" id="pills-products-tab" data-toggle="pill" href="#pills-products" role="tab" aria-controls="pills-products" aria-selected="false">Produits</a>
     <a class="nav-item nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</a>
@@ -49,7 +50,7 @@
   <!-- Fin de l'onglet de navigation -->
 
   <!-- Contenue de l'onglet de navigation -->
-  <div class="tab-content" id="pills-tabContent">
+  <div class="tab-content image" id="pills-tabContent">
     <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">Et prima post Osdroenam quam, ut dictum est, ab hac descriptione discrevimus, Commagena, nunc Euphratensis, clementer adsurgit, Hierapoli, vetere Nino et Samosata civitatibus amplis inlustris.
       Eminuit autem inter humilia supergressa iam impotentia fines mediocrium delictorum nefanda Clematii cuiusdam Alexandrini nobilis mors repentina; cuius socrus cum misceri sibi generum, flagrans eius amore, non impetraret, ut ferebatur, per palatii pseudothyrum introducta, oblato pretioso reginae monili id adsecuta est, ut ad Honoratum tum comitem orientis formula missa letali omnino scelere nullo contactus idem Clematius nec hiscere nec loqui permissus occideretur.
       Mox dicta finierat, multitudo omnis ad, quae imperator voluit, promptior laudato consilio consensit in pacem ea ratione maxime percita, quod norat expeditionibus crebris fortunam eius in malis tantum civilibus vigilasse, cum autem bella moverentur externa, accidisse plerumque luctuosa, icto post haec foedere gentium ritu perfectaque sollemnitate imperator Mediolanum ad hiberna discessit.
@@ -71,36 +72,36 @@
       Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
       Et quoniam inedia gravi adflictabantur, locum petivere Paleas nomine, vergentem in mare, valido muro firmatum, ubi conduntur nunc usque commeatus distribui militibus omne latus Isauriae defendentibus adsueti. circumstetere igitur hoc munimentum per triduum et trinoctium et cum neque adclivitas ipsa sine discrimine adiri letali, nec cuniculis quicquam geri posset, nec procederet ullum obsidionale commentum, maesti excedunt postrema vi subigente maiora viribus adgressuri.</div>
       <div class="tab-pane fade" id="pills-products" role="tabpanel" aria-labelledby="pills-products-tab">
-          <!-- PARTIE ADRIEN -->
-          <!-- DÉBUT CONTAINER -->
-          <div class="container">
+        <!-- PARTIE ADRIEN -->
+        <!-- DÉBUT CONTAINER -->
+        <div class="container">
 
-            <!-- DÉBUT DU ROW -->
-            <div class="row gruge">
+          <!-- DÉBUT DU ROW -->
+          <div class="row gruge">
 
-              <!-- PREMIER JEU -->
-              <div class="col-lg-3 col-sm-1">
-                <div class="card element box">
-                  <!-- Image -->
-                  <div class="card-image"><img class="fiximg" src="assets/imgs/rdr2.jpg" alt="Responsive image" /></div>
-                  <!-- Corp de notre carte -->
-                  <div class="card-body">
-                    <!-- Titre du jeu -->
-                    <div class="card-title">
-                      <!-- Popover pour la description sur le titre du jeu -->
-                      <button type="button" class="btn Abutton" data-container="body" data-toggle="popover" data-placement="top" data-content="Je suis un jeu, oui.">
-                        RDR 2
-                      </button>
-                    </div>
-                    <!-- Description du jeu -->
-                    <div class="card-excerpt">
-                      <p></p>
-                    </div>
-                    <button class="Abutton" href="#" >Ajouter au panier !</button>
+            <!-- PREMIER JEU -->
+            <div class="col-lg-3 col-sm-1">
+              <div class="card element box">
+                <!-- Image -->
+                <div class="card-image"><img class="fiximg" src="assets/imgs/rdr2.jpg" alt="Responsive image" /></div>
+                <!-- Corp de notre carte -->
+                <div class="card-body">
+                  <!-- Titre du jeu -->
+                  <div class="card-title">
+                    <!-- Popover pour la description sur le titre du jeu -->
+                    <button type="button" class="btn Abutton" data-container="body" data-toggle="popover" data-placement="top" data-content="Je suis un jeu, oui.">
+                      RDR 2
+                    </button>
                   </div>
-                  <!-- Fin du corp -->
+                  <!-- Description du jeu -->
+                  <div class="card-excerpt">
+                    <p></p>
+                  </div>
+                  <button class="Abutton" href="#" >Ajouter au panier !</button>
                 </div>
+                <!-- Fin du corp -->
               </div>
+            </div>
 
             <!-- DEUXIÈME JEU -->
             <div class="col-lg-3 col-sm-1">
@@ -471,37 +472,39 @@
 
         <!-- FIN DE PARTIE ADRIEN -->
       </div>
-      <div class="tab-pane fade" id="pills-bag" role="tabpanel" aria-labelledby="pills-bag-tab">Test panier</div>
       <!-- Début contact Page -->
       <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-        <div class="container c">
-          <form action="">
-            <label for="fname">Prénom</label>
-            <input class="names" type="text" id="fname" name="firstname" placeholder="Votre prénom...">
-            <label for="lname">Nom</label>
-            <input class="names" type="text" id="lname" name="lastname" placeholder="Votre nom...">
-            <label for="country">Pays</label>
-            <select id="country" name="country">
-              <option value="belgium">Belgique</option>
-              <option value="france">France</option>
-              <option value="luxembourg">Luxembourg</option>
-              <option value="monaco">Monaco</option>
-              <option value="quebec">Quebec</option>
-              <option value="switzerland">Suisse</option>
-            </select>
-            <label for="subject">Votre message :</label>
-            <textarea id="subject" name="subject" placeholder="Écrivez..." style="height:200px"></textarea>
-            <input type="submit" value="Submit">
-          </form>
+        <div id="paddingContact">
+          <div class="container c">
+            <form action="">
+              <label for="fname">Prénom</label>
+              <input class="names" type="text" id="fname" name="firstname" placeholder="Votre prénom...">
+              <label for="lname">Nom</label>
+              <input class="names" type="text" id="lname" name="lastname" placeholder="Votre nom...">
+              <label for="country">Pays</label>
+              <select id="country" name="country">
+                <option value="belgium">Belgique</option>
+                <option value="france">France</option>
+                <option value="luxembourg">Luxembourg</option>
+                <option value="monaco">Monaco</option>
+                <option value="quebec">Quebec</option>
+                <option value="switzerland">Suisse</option>
+              </select>
+              <label for="subject">Votre message :</label>
+              <textarea id="subject" name="subject" placeholder="Écrivez..." style="height:200px"></textarea>
+              <input type="submit" value="Submit">
+            </form>
+          </div>
         </div>
       </div>
       <!-- Fin contact page -->
+      <div class="tab-pane fade" id="pills-bag" role="tabpanel" aria-labelledby="pills-bag-tab"></div>
     </div>
     <!-- Fin du contenu de l'onglet de navigation -->
 
     <!-- partie Julien -->
     <!-- Footer -->
-  <footer class="page-footer font-small stylish-color-dark fcolor">
+    <footer class="page-footer font-small stylish-color-dark fcolor">
 
       <div class="container text-center text-md-left">
         <div class="row ">
@@ -509,115 +512,115 @@
 
             <h5 class="font-weight-bold text-uppercase mt-3 mb-4">E-Games</h5>
             <p>E-Games, le spécialiste de la vente de jeux en ligne ! Achetez tout vos jeux au
-            meilleur prix et avec un service client garanti !<br /> Nous nous trouvons au 2 rue Dombasle,
-            au Havre, venez nous rendre visite !</p>
+              meilleur prix et avec un service client garanti !<br /> Nous nous trouvons au 2 rue Dombasle,
+              au Havre, venez nous rendre visite !</p>
 
-          </div>
+            </div>
 
-          <hr class="clearfix w-100 d-md-none">
+            <hr class="clearfix w-100 d-md-none">
 
-          <div class="col-lg-3 col-md-2 mx-auto ">
+            <div class="col-lg-3 col-md-2 mx-auto ">
 
-            <!--Maps Google-->
+              <!--Maps Google-->
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2592.0259523995096!2d0.13147335073038988!3d49.48401676430452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e02e55af007f11%3A0xcb679803210d6c5c!2s2+Rue+de+Dombasle%2C+76600+Le+Havre!5e0!3m2!1sfr!2sfr!4v1539862615583" width="250" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2592.0259523995096!2d0.13147335073038988!3d49.48401676430452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e02e55af007f11%3A0xcb679803210d6c5c!2s2+Rue+de+Dombasle%2C+76600+Le+Havre!5e0!3m2!1sfr!2sfr!4v1539862615583" width="250" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-          </div>
+            </div>
 
-          <!--Séparation-->
-          <hr class="clearfix w-100 d-md-none">
+            <!--Séparation-->
+            <hr class="clearfix w-100 d-md-none">
 
-          <div class="col-lg-1 col-md-2 mx-auto ">
+            <div class="col-lg-1 col-md-2 mx-auto ">
 
-            <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Jeux</h5>
+              <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Jeux</h5>
 
-            <ul class="list-unstyled">
-              <li>
-                <a href="#!">Aventure</a>
-              </li>
-              <li>
-                <a href="#!">Action</a>
-              </li>
-              <li>
-                <a href="#!">RPG</a>
-              </li>
-              <li>
-                <a href="#!">FPS</a>
-              </li>
-              <li>
-                <a href="#!">Stratégie</a>
-              </li>
-            </ul>
+              <ul class="list-unstyled">
+                <li>
+                  <a href="#!">Aventure</a>
+                </li>
+                <li>
+                  <a href="#!">Action</a>
+                </li>
+                <li>
+                  <a href="#!">RPG</a>
+                </li>
+                <li>
+                  <a href="#!">FPS</a>
+                </li>
+                <li>
+                  <a href="#!">Stratégie</a>
+                </li>
+              </ul>
 
-          </div>
+            </div>
 
-          <!--Séparation-->
-          <hr class="clearfix w-100 d-md-none">
+            <!--Séparation-->
+            <hr class="clearfix w-100 d-md-none">
 
-          <div class="col-lg-2 col-md-2 mx-auto ">
+            <div class="col-lg-2 col-md-2 mx-auto ">
 
-            <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Mon compte</h5>
+              <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Mon compte</h5>
 
-            <ul class="list-unstyled">
-              <li>
-                <a href="#!">Panier</a>
-              </li>
-              <li>
-                <a href="#!">Profil</a>
-              </li>
-            </ul>
+              <ul class="list-unstyled">
+                <li>
+                  <a href="#!">Panier</a>
+                </li>
+                <li>
+                  <a href="#!">Profil</a>
+                </li>
+              </ul>
+
+            </div>
 
           </div>
 
         </div>
 
-      </div>
+        <!--Séparation-->
+        <hr class="tcolor">
 
-      <!--Séparation-->
-      <hr class="tcolor">
+        <!--Bouton Newsletter-->
+        <ul class="list-unstyled list-inline text-center py-2">
+          <li class="list-inline-item">
+            <h5 class="mb-1">Inscrivez-vous à la newsletter !</h5>
+          </li>
+          <li class="list-inline-item">
+            <a href="#!" id="btnrad" class="btn btn-danger btn-rounded btncolor">Inscription</a>
+          </li>
+        </ul>
 
-      <!--Bouton Newsletter-->
-      <ul class="list-unstyled list-inline text-center py-2">
-        <li class="list-inline-item">
-          <h5 class="mb-1">Inscrivez-vous à la newsletter !</h5>
-        </li>
-        <li class="list-inline-item">
-          <a href="#!" id="btnrad" class="btn btn-danger btn-rounded btncolor">Inscription</a>
-        </li>
-      </ul>
+        <!--Séparation-->
+        <hr class="tcolor">
 
-      <!--Séparation-->
-      <hr class="tcolor">
-
-      <!--Vignettes réseaux sociaux-->
-      <ul class="list-unstyled list-inline text-center">
-        <li class="list-inline-item">
-          <a href="#">
-          <img src="assets/imgs/facebook.png">
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a href="#">
-          <img src="assets/imgs/twitter.png">
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a href="#">
-          <img src="assets/imgs/discord.png">
-          </a>
-        </li>
-      </ul>
+        <!--Vignettes réseaux sociaux-->
+        <ul class="list-unstyled list-inline text-center">
+          <li class="list-inline-item">
+            <a href="#">
+              <img src="assets/imgs/facebook.png">
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <img src="assets/imgs/twitter.png">
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <img src="assets/imgs/discord.png">
+            </a>
+          </li>
+        </ul>
 
 
-      <p class="ptext">Made with &hearts; by team 14</p>
+        <p class="ptext">Made with &hearts; by team 14</p>
 
-  </footer>
-  <!-- Footer -->
-  <!-- fin partie Julien -->
+      </footer>
+      <!-- Footer -->
+      <!-- fin partie Julien -->
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="assets/javascript/script.js"></script>
-</body>
-</html>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+      <script type="text/javascript" src="assets/javascript/script.js"></script>
+    </body>
+    </html>
