--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
 <p class="carioca">E-games.fr c'est un site de vente de jeux vidéos quand même plus jeux que les sites habituels, du moins c'est ce qu'on en pense
   chez nous. Par contre y'a pas grands choses à dire vu que c'est pas un vrais site, donc pour remplir on vous montre les paroles
   de la carioca.<br>
-Sais tu danser la carioca? C'n'est pas un fox trot Ou une polka C'n'est vraiment pas Très compliqué Pour la comprendre
-Suis bien mes pas C'n'est pas un tango Ou un cha cha Encore moins Une bossa nova Quand t'as goûté A cette danse là Tu ne peux
-Plus faire que ça Youpi Dansons la carioca C'est bien Faisez tous comme moi Youpi Avec la carioca Tant pis s'il faut dire
-Aux autres danses "Au revoir" Maint'nant qu'tu danses La carioca Ça tu t'en fiches bien De la polka Tu n'en veux plus
-De la rumba, du houla hop Et du cha cha Tous les matins Dès le lever La carioca Te fais bouger Et quand tu danses
-Chaque petit pas Te mets en joie Pour la journée Youpi Dansons la carioca C'est bien Faisez tous comme moi Oh oui!
-Youpi Dansons la carioca Tant pis s'il faut dire A tout le monde "Au revoir"</p>
+Sais tu danser la carioca ? C'n'est pas un fox trot ou une polka, c'n'est vraiment pas très compliqué, pour la comprendre
+suis bien mes pas. C'n'est pas un tango ou un cha cha, encore moins une bossa nova, quand t'as goûté à cette danse là tu ne peux
+Plus faire que ça ... Youpi, dansons la carioca, c'est bien, faisez tous comme moi. Youpi, avec la carioca. Tant pis s'il faut dire
+aux autres danses "Au revoir". Maint'nant qu'tu danses la carioca, ça tu t'en fiches bien de la polka. Tu n'en veux plus
+de la rumba, du houla hop, et du cha cha ! Tous les matins dès le lever, la carioca te fais bouger, et quand tu danses
+chaque petit pas te mets en joie, pour la journée. Youpi ! Dansons la carioca, c'est bien, faisez tous comme moi. Oh oui!
+Youpi ! Dansons la carioca, tant pis s'il faut dire à tout le monde "Au revoir" ...</p>
 
       <!-- FIN DE DESCRIPTION DU SITE -->
     </div>
