--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   <div class="card-excerpt">
                     <p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000001" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -164,7 +164,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000002" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -187,7 +187,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000003" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -210,7 +210,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000004" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -238,7 +238,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000005" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -261,7 +261,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000006" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -284,7 +284,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000007" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -307,7 +307,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000008" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -335,7 +335,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000009" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -358,7 +358,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000010" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -381,7 +381,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000011" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -404,7 +404,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000012" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -433,7 +433,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000013" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -456,7 +456,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000014" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -479,7 +479,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000015" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -502,7 +502,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt">
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2 &euro;" >Ajouter au panier !</button>
+                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000016" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
