--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <!-- Onglet de navigation -->
   <div class="nav navbar-expand-lg nav-pills sticky-top" id="pills-tab" role="tablist">
-    <a class="nav-item nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Acceuil</a>
+    <a class="nav-item nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Accueil</a>
     <a class="nav-item nav-link" id="pills-products-tab" data-toggle="pill" href="#pills-products" role="tab" aria-controls="pills-products" aria-selected="false">Produits</a>
     <a class="nav-item nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</a>
     <a class="nav-item nav-link" id="pills-bag-tab" href="#pills-bag" role="tab" aria-controls="pills-bag" aria-selected="false"><img src="assets/imgs/Panier 200X191.png" id="imgBag" alt="Panier"></a>
@@ -492,7 +492,7 @@
               </select>
               <label for="subject">Votre message :</label>
               <textarea id="subject" name="subject" placeholder="Écrivez..." style="height:200px"></textarea>
-              <input type="submit" value="Submit">
+              <input type="submit" value="Envoyer">
             </form>
           </div>
         </div>
